<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="edu.wisc.chess.tick.Authentication.LoginActivity">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:text="@string/signup_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/signup_username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_username_label"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/prompt_username" />

        <TextView
            android:id="@+id/signup_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_label"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/prompt_password" />

        <TextView
            android:id="@+id/signup_confirm_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_confirm_password_label"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/edit_reenter_password"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:text="@string/button_signup_label"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <Button
            android:id="@+id/already_a_member_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:text="@string/button_already_a_member_label"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/version_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_version" />
    </LinearLayout>
</ScrollView>